# flash_app

./: .env  .gitignore  Makefile  app.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
src/db/: database.py  models.py
src/flash/: flash.py  rr.py  thermo.py
src/flash.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_app.py  test_flash.py  test_flash_api.py  test_rr.py  test_thermo.py
