
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flash"
version = "0.1.0"
description = "Flash calculation backend with Flask and TDD"
authors = [{ name="Your Name" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "flask",
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
